# argparse_subcommand

./: README.md  argparse_subcommand.py  pyproject.toml
test/: __init__.py  test_argparse_subcommand.py
test/cmd/: a.py  b.py
