[tool.poetry]
name = "argparse_subcommand"
version = "1.2"
description = "structure and simplify subcommand handling with argparse"
license = "LICENSE"
authors = ["Lutz Prechelt"]
readme = "README.md"
homepage = "https://github.com/prechelt/argparse_subcommand"
repository = "https://github.com/prechelt/argparse_subcommand"
keywords = ["argparse"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [
    { include = "*.py" },
]
include = ["README.md", "LICENSE", "pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.7"

# Release procedure:
# - make changes
# - test them
# - change version in pyproject.toml
# - describe version in README.md
# - poetry build
# - poetry publish
#
# for  poetry publish use
# export POETRY_HTTP_BASIC_PYPI_USERNAME=<username>
# export POETRY_HTTP_BASIC_PYPI_PASSWORD=<password>